aks-scripts/mws-dhl-go2-demo-project/dhl-go2-mws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/session-cookie-name: mydemomwsroute
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2023-08-17T09:36:08Z"
  generation: 3
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    subresource: status
    time: "2023-08-17T09:37:07Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:cert-manager.io/cluster-issuer: {}
          f:nginx.ingress.kubernetes.io/affinity: {}
          f:nginx.ingress.kubernetes.io/backend-protocol: {}
          f:nginx.ingress.kubernetes.io/session-cookie-max-age: {}
          f:nginx.ingress.kubernetes.io/session-cookie-name: {}
          f:nginx.ingress.kubernetes.io/ssl-redirect: {}
      f:spec:
        f:ingressClassName: {}
        f:rules: {}
        f:tls: {}
    manager: rancher
    operation: Update
    time: "2023-08-17T09:39:31Z"
  name: dhl-go2-mws
  namespace: dhl-go2-bpms
  resourceVersion: "558397574"
  uid: 479b4623-d116-4430-aabd-04534292bae1
spec:
  ingressClassName: nginx
  rules:
  - host: dhl-go2-mws-demo-144fd7c1.nip.io
    http:
      paths:
      - backend:
          service:
            name: dhl-go2-mws-demo-my-project-svc-0
            port:
              number: 8585
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dhl-go2-mws-demo-144fd7c1.nip.io
    secretName: tls-mws-demo-staging
status:
  loadBalancer:
    ingress:
    - ip: 20.79.215.193
