aks-scripts/mws-dhl-go2-demo-project/dhlGo2BpmsDemo-mws-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: dhl-go2-mws-demo-my-project-svc
  namespace: dhl-go2-bpms
  labels:
    app: dhl-go2-mws-demo-my-project
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 8585
      targetPort: 8585
  clusterIP: None
  selector:
    app: dhl-go2-mws-demo-my-project


---

kind: Service
apiVersion: v1
metadata:
  name: dhl-go2-mws-demo-my-project-svc-0
  namespace: dhl-go2-bpms
  labels:
    app: dhl-go2-mws-demo-my-project
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 8585
      targetPort: 8585
  selector:
    statefulset.kubernetes.io/pod-name: dhl-go2-mws-demo-my-project-0
